--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
   "name": "vinayak-designs",
   "private": true,
-  "version": "0.0.0",
-  "homepage": "https://gamedemons.github.io/deweb-jewelry/",  
+  "version": "1.5.0",
+  "homepage": "https://gamedemons.github.io/deweb-jewelry/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "blurhash": "^2.0.5",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
